# Chronolog

./: .chronologignore  .gitignore  IMPLEMENTATION_ROADMAP.md  LICENSE  README.md  pyproject.toml  run_all_tests.py  setup.py  test_help_output.py  test_phase4_phase5_features.py
chronolog/: __init__.py  __main__.py  api.py  cli.py  ignore.py  main.py
chronolog-tui/: README.md  pyproject.toml
chronolog-tui/chronolog_tui/: __init__.py  api_bridge.py  main.py  styles.css
chronolog-tui/chronolog_tui/views/: __init__.py  dashboard_view.py  file_tree_view.py  history_view.py
chronolog/analytics/: __init__.py  metrics_collector.py  performance_analytics.py  visualization.py
chronolog/backup/: __init__.py  backup_manager.py  scheduler.py
chronolog/cloud/: __init__.py  cloud_provider.py  s3_provider.py  sync_manager.py
chronolog/daemon/: daemon.py
chronolog/diff/: __init__.py  binary_diff.py  semantic_diff.py  word_diff.py
chronolog/git_integration/: __init__.py  git_exporter.py  git_importer.py
chronolog/hooks/: __init__.py  hook_manager.py  scripting_api.py
chronolog/merge/: __init__.py  conflict_resolver.py  (+1 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_HELP.md  CLI_REFERENCE.md  INSTALLATION_SETUP.md  PHASE1_FEATURES.md  PRD.MD  README.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  VERIFICATION_REPORT.md
tests/: search_test1.txt  search_test2.py  search_test3.md  test_analytics.py  test_merge.py  test_optimization.py  test_phase1_features.py  test_phase2_phase3_features.py  test_real_functionality.py  test_users.py  test_web_api.py
(+26 files in other folders)
