[project]
name = "chronolog"
version = "1.0.0"
description = "A frictionless, local-first version control system for creative workflows"
authors = [{Vilas Magare"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "watchdog>=3.0.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "psutil>=5.9.0",
]

[project.scripts]
chronolog = "chronolog.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chronolog"]